<resources>
    <string-array name="relationship_type">
        <item>Parent</item>
        <item>Partner</item>
        <item>Child</item>
    </string-array>

    <string name="app_name">Family Tree</string>
    <string name="my_trees">My Trees</string>
    <string name="shared_with_me">Shared with me</string>
    <string name="family_tree_name">Family Tree ABC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="date_of_death">Date of death</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="career">Career</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="middle_name">Mid name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="username_or_email">Username or email</string>
    <string name="save">Save</string>
    <string name="note">Note</string>
    <string name="relationship">Relationship</string>
    <string name="owner">Owner</string>
    <string name="contributors">Contributors</string>
    <string name="memory_date">Memory date</string>
    <string name="post">Post</string>
</resources>