<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_avatar"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@drawable/bg_avatar_no_stroke"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/last_name" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/female" />
        </RadioGroup>

        <EditText
            android:id="@+id/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/date_of_birth" />

        <EditText
            android:id="@+id/dateOfDeath"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/date_of_death" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/phone_number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/facebook" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/career" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>