<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/authFirstName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/first_name"
                android:padding="10dp" />

            <EditText
                android:id="@+id/authMidName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/middle_name"
                android:padding="10dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/authLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/last_name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/authUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/username"
            android:padding="10dp" />

        <EditText
            android:id="@+id/authEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:padding="10dp" />

        <EditText
            android:id="@+id/authPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/phone_number"
            android:padding="10dp" />

        <EditText
            android:id="@+id/authPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:padding="10dp" />

        <EditText
            android:id="@+id/authConfirmPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/confirm_password"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>