<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/white"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/treeImage"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_my_trees"
        android:background="@drawable/bg_avatar_no_stroke"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/treeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/family_tree_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/treeImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/treeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/treeName"
        app:layout_constraintStart_toStartOf="@+id/treeName"
        app:layout_constraintTop_toBottomOf="@+id/treeName" />

    <TextView
        android:id="@+id/treeOwner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/owner"
        app:layout_constraintEnd_toEndOf="@+id/treeDescription"
        app:layout_constraintStart_toStartOf="@+id/treeDescription"
        app:layout_constraintTop_toBottomOf="@+id/treeDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
