<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/posterAvatar"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_avatar_no_stroke"
                android:src="@drawable/ic_user"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/posterUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textColor="@color/black" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_calendar"/>
                    <TextView
                        android:id="@+id/memoryDate"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:text="@string/memory_date"
                        android:textSize="18sp"
                        android:paddingStart="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/memoryDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:padding="8dp"
            android:textColor="@color/black"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/imageList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
<!--                <ImageView-->
<!--                    android:layout_width="500dp"-->
<!--                    android:layout_height="500dp"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    android:src="@drawable/ic_launcher_foreground"-->
<!--                    android:background="@color/secondary"/>-->
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <ImageView
        android:id="@+id/deleteMemoryBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>